# toml

crates/toml_ops/: Cargo.toml  README.md
crates/toml_ops/examples/: pathread.rs  pathread_mut.rs  pathwrite.rs  sample.toml
crates/toml_ops/src/: code.rs.bak  lib.rs  operator.rs  tests.rs
crates/toml_ops/src/operator/: tests.rs
crates/toml_ops/tests/: operator.rs
